--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <!--vzdělání, zkušenosti-->
             <div class="right-side">
-                <h2>O mně</h2>
+                <h2 class="section-omne">O mně</h2>
                 <p class="text-my">
                     Jsem nadšená juniorní programátorka., která začala kurz
                     Kodérky a chytlo jí to natolik, že se rozhodla změnit svůj
@@ -58,7 +58,7 @@
                     <h2>Anglický jazyk</h2>
                     <li><p>B1</p></li>
                 </ul>
-                <h2 class="skils"> Zkušenosti</h2>
+                <h2 class="skils"> Kurzy</h2>
                 <ul class="list"><li>
                         <p>Czechitas 2022 - zakončeno certifikátem</p></li>
                     <li><p>Udemy The Complete JavaScript Course 2022-2023</p></li>
@@ -75,7 +75,7 @@
                         <li> <h3>JavaScript</h3></li>
                         <div class="JS"></div>
                         <li><h3>Sass</h3></li>
-                        <li><h3>Boostrap</h3></li>
+                        <li><h3>Bootstrap</h3></li>
                     </ul>
                 </div>
                 <div class="works">
